# QRMenu

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.html  pyproject.toml
app/: config.py  db.py  deps.py  main.py  utils.py
app/auth/: router.py  service.py
app/billing/: router.py  webhook.py
app/cafes/: models.py  router.py
app/media/: router.py  service.py
app/menu/: router.py
app/owner/: router.py
app/public/: router.py
app/qr/: router.py
static/: owner.js
templates/: base.html  menu.html
templates/owner/: _layout.html  cafe.html
templates/owner/partials/: category_row.html  item_row.html
